assets/css/ollie.css
/* ... */
@media (max-width: 767.98px) {
  .header {
    height: auto;
    padding: 50px 0;
  }

  .header .carousel {
    margin-top: 100px;
  }

  .infos {
    margin-top: 40px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    padding: 0 10px;
  }

  .infos .socials,
  .infos .title {
    width: 100%;
    text-align: left;
  }

  .infos .socials {
    margin-top: 20px;
  }
}

@media (max-width: 767.98px) {

  .header .carousel-control-prev,
  .header .carousel-control-next {
    display: none !important;
  }
}

.section {
  padding: 70px 10px;
}

.section:nth-child(odd) {
  background-color: #f1fafb;
}

.section.p-sm {
  padding: 30px 0 !important;
}

.section.p-md {
  padding: 60px 0 !important;
}

.section.bg-overlay {
  background: #2C3E50;
  color: #fff;
}

.map-responsive {

  overflow: hidden;

  padding-bottom: 100%;

  position: relative;

  height: 0;

}

.map-responsive iframe {

  left: 0;

  top: 0;

  height: 100%;

  width: 100%;

  position: absolute;

}

.title-logo-responsive {
  max-width: 100%;
  min-width: 300px;
  /* max-width: 1000px; */
  height: auto;
}

.img-tel {
  position: absolute;
  width: 77px;
  height: 78px;
  left: 85px;
  top: 745px;
}

::-webkit-scrollbar {
  background: transparent;
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: #606060;
  border-radius: 5px;
}

